# aiy-voice-assistant

./: CLAUDE.md  CONTRIBUTING.md  README.md  check_logs.sh  config.json  main.py  pyproject.toml  requirements.txt  run.sh  run_tests.py  setup_service.sh  start_script.sh  tech_support_mode.py  try_rt.py  user.json.example
.junie/: guidelines.md
aiy/: board.py
aiy/voice/: audio.py
google/api/: annotations_pb2.py  http_pb2.py
google/rpc/: status_pb2.py  status_pb2_grpc.py
scripts/: check_logs.sh  run.sh  send_email.sh  tailscale-down.sh  tailscale-up.sh
src/: STTEngine.py  ai_models.py  ai_models_with_tools.py  aqi.py  audio.py  background_tasks.py  code_interpreter_tool.py  config.py  conversation_manager.py  dialog.py  email_tools.py  gemini_image_tool.py  interpreter_tool.py  interpreter_tool_judge0.py  interpreter_tool_openai.py  led_feedback.py  llm_tools.py  minimax_music_tool.py  moon.py  openai_interaction.py  openuv.py  responce_player.py  shared_state.py  speech.py  stress_tool.py  stt.py  stt_engine.py  sunrise.py  tailscale_manager.py  tech_support_mode.py  tools.py  tts.py  tts_buffer.py  tts_engine.py  voice.py  volume_control_tool.py  weather_tool.py  web_search.py  web_search_tool.py  wizard_tool.py
tests/: mock_aiy.py  mock_response_player.py  test_ai_models.py  test_audio.py  test_config.py  test_conversation_manager.py  test_dialog.py  test_log_error_notification.py  test_reasoning_effort.py  test_response_player.py  test_stt_engine.py  test_tools.py  test_tts_engine.py
utils/: check_tts_usage.py  merge_python_files.sh
yandex/cloud/: validation_pb2_grpc.py
yandex/cloud/ai/stt/v3/: stt_pb2.py  stt_pb2_grpc.py  stt_service_pb2_grpc.py
yandex/cloud/api/: operation_pb2_grpc.py
yandex/cloud/operation/: operation_pb2_grpc.py
