[tool.poetry]
name = "cubie"
version = "0.1.0"
description = "AI-powered voice assistant using Python, designed to work with the Google Voice Kit V2 hardware platform. While created with children in mind, this assistant serves as an interactive, educational, and fun companion for users of all ages. It features advanced capabilities such as emotional expression, memory formation, and self-improvement mechanisms, all tailored to provide a safe and enriching experience."
authors = ["Anton Treskunov"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rpi-gpio = "^0.7.1"
protobuf = "3.20.3"
gpiozero = "^2.0.1"
pydantic = "2.4.0"
tqdm = "4.66.3"
openai = "^1.51.2"
anthropic = "^0.36.0"
yandex-speechkit = "^1.5.0"
lxml = "^5.3.0"
cssselect = "^1.2.0"
aiosmtplib = "^3.0.2"
aiohttp = "3.12.14"
aiofiles = "^24.1.0"
httpx = "^0.27.2"
googlemaps = "^4.10.0"
chardet = "^5.2.0"
geocoder = "^1.38.1"
pytz = "^2024.2"
python-dotenv = "^1.0.1"
pytoml = "^0.1.21"
duckduckgo-search = "3.8.5"
google-cloud = "^0.34.0"
grpcio = "1.67.0"
websockets = "^13.1"
zep-cloud = "^2.1.0"
pydub = "^0.25.1"
mutagen = "^1.47.0"
Pillow = "^6.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
